fix: sidenav to properly show all items when there is an overflow (ENG-62513)

--- a/src/sideNav/SideNavMenu.less
+++ b/src/sideNav/SideNavMenu.less
@@ -23,9 +23,9 @@
 @import '~@bluecateng/pelagos/less/colors';
 
 .SideNavMenu__nav {
-    position: fixed;
-    height: 100%;
+    position: absolute;
     width: 256px;
+    bottom: 0;
     background-color: var(--layer);
 
     .SideNav__link {
